--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
   ],
   "author": "Prathamesh Parulekar",
   "license": "ISC",
-  "dependencies": {
-    "-": "^0.0.1",
-    "D": "^1.0.0",
-    "nodemon": "^3.0.3"
+  "devDependencies": {
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.5"
   }
 }
